--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-privacyshield" class="navigator-link">
-              <span class="suite-name border-passed">privacyshield</span>
+              <span class="suite-name border-failed">privacyshield</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,21 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-privacyshield" class="hide-methods passed suite-privacyshield"> (hide)</a> <!-- hide-methods passed suite-privacyshield -->
-                      <a href="#" panel-name="suite-privacyshield" class="show-methods passed suite-privacyshield"> (show)</a> <!-- show-methods passed suite-privacyshield -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-privacyshield" class="hide-methods failed suite-privacyshield"> (hide)</a> <!-- hide-methods failed suite-privacyshield -->
+                      <a href="#" panel-name="suite-privacyshield" class="show-methods failed suite-privacyshield"> (show)</a> <!-- show-methods failed suite-privacyshield -->
                     </span>
-                    <div class="method-list-content passed suite-privacyshield">
+                    <div class="method-list-content failed suite-privacyshield">
                       <span>
-                        <img src="passed.png" width="3%"/>
+                        <img src="failed.png" width="3%"/>
                         <a href="#" panel-name="suite-privacyshield" title="com.privacyshield.testcases.TC_Psform_01" class="method navigator-link" hash-for-method="submitform">submitform</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-privacyshield -->
+                    </div> <!-- method-list-content failed suite-privacyshield -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -117,9 +117,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-privacyshield" class="panel privacyshield">
-          <div class="suite-privacyshield-class-passed">
+          <div class="suite-privacyshield-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">com.privacyshield.testcases.TC_Psform_01</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -128,10 +128,27 @@
                   <a name="submitform">
                   </a> <!-- submitform -->
                   <span class="method-name">submitform</span>
+                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: Unable to find element with locator By.xpath: //label[text()=&quot;Last Name&quot;]//preceding::input[@class=&quot;x25&quot;][1]
+For documentation on this error, please visit: https://selenium.dev/exceptions/#no_such_element
+Build info: version: &apos;4.4.0&apos;, revision: &apos;e5c75ed026a&apos;
+System info: host: &apos;AAAW46ZLPC0508&apos;, ip: &apos;192.168.0.103&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.1&apos;
+Driver info: driver.version: RemoteWebDriver
+	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:60)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:365)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:357)
+	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:70)
+	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:39)
+	at jdk.proxy2/jdk.proxy2.$Proxy17.sendKeys(Unknown Source)
+	at com.privacyshield.pageobjects.Paymentpage.setZipCode(Paymentpage.java:113)
+	at com.privacyshield.testcases.TC_Psform_01.submitform(TC_Psform_01.java:70)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 27 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-privacyshield-class-passed -->
+          </div> <!-- suite-privacyshield-class-failed -->
         </div> <!-- panel privacyshield -->
         <div panel-name="test-xml-privacyshield" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -189,12 +206,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'submitform')
 data.setCell(0, 2, 'com.privacyshield.testcases.TC_Psform_01')
-data.setCell(0, 3, 70962);
+data.setCell(0, 3, 53056);
 window.suiteTableData['privacyshield']= { tableData: data, tableDiv: 'times-div-privacyshield'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 53 seconds</span>
               <div id="times-div-privacyshield">
               </div> <!-- times-div-privacyshield -->
             </div> <!-- times-div -->
@@ -226,12 +243,14 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">submitform</span>
-                <span class="method-start">7176 ms</span>
+                <span class="method-start">7077 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">78142 ms</span>
+                <span class="method-start">60151 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
